[package]
name = "runestone"
version = "0.1.0"
authors = ["Jeason <me@cowpoke.cc>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ordinals = "0.0.8"
wasm-bindgen = "0.2.92"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
bitcoin = "0.30.2"
js-sys = "0.3.69"
tsify = "0.4.5"

