[package]
name = "runestone"
version = "0.1.0"
authors = ["Jeason <me@cowpoke.cc>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ord = "0.18.4"
ordinals = "0.0.8"
bitcoin = "0.30.2"
wasm-bindgen = "0.2.92"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.69"
tsify = "0.4.5"
gloo-utils = { version = "0.2", features = ["serde"] }
arbitrary = { version = "1", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }
mio = { version = "0.8", features = ["net"] }
