[package]
name = "runestone"
version = "0.1.0"
authors = ["Jeason <me@cowpoke.cc>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ordinals = "0.0.8"
bitcoin = "0.30.2"
wasm-bindgen = "0.2.92"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
serde-wasm-bindgen = "0.6.5"
serde_with = "3.7.0"
js-sys = "0.3.69"
tsify = "0.4.5"
gloo-utils = { version = "0.2", features = ["serde"] }
anyhow = { version = "1.0.56", features = ["backtrace"] }
